# friendly-time

./: .restyled.yaml  .travis.yml  Makefile  README.md  circle.yml  friendly-time.cabal  package.yaml  stack.yaml
.circleci/: config.yml
Data/Time/Format/: Human.hs
src/Data/Time/Format/: Human.hs
src/Data/Time/Format/Human/: Duration.hs  FormatDuration.hs  Locale.hs  Locales.hs  Translations.hs
test/Data/Time/Format/: HumanSpec.hs
test/Data/Time/Format/Human/: DurationSpec.hs
tests/: Main.hs
