name:                   friendly-time
version:                0.3
author:                 Pat Brisbin <pbrisbin@gmail.com>
maintainer:             Pat Brisbin <pbrisbin@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               Print time information in friendly ways
description:            Print time information in friendly ways
build-type:             Simple
cabal-version:          >= 1.10
build-type:             Simple

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
  exposed-modules:      Data.Time.Format.Human
                      , Data.Time.Format.Human.Translations
  build-depends:        base >= 4 && < 5
                      , data-default
                      , time
                      , transformers >= 0.2 && < 0.5
                      , old-locale

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  main-is:              Spec.hs
  build-depends:        base
                      , hspec
                      , friendly-time
                      , time
                      , old-locale

source-repository head
  type:                 git
  location:             git://github.com/pbrisbin/friendly-time.git
